--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     </div>
 
     <div class="w3-third w3-center">
-      <i class="fa fa-headset w3-padding-64 w3-text-blue"></i>
+      <i class="fa fa-airplane w3-padding-64 w3-text-blue"></i>
     </div>
   </div>
 </div>
