--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
       <h1>Easy Discoverability</h1>
       <h5 class="w3-padding-32">Our amazing algorithm allows new and small creators with good content to be discovered easily.</h5>
 
-      <p class="w3-text-grey">Our team is developing an advaned algorithm that allows creators to be discovered easily by creating appealling content that keeps users on their streams for longer. This allows any creator to begin earning and becoming a partner extremely quickly!</p>
+      <p class="w3-text-grey">Our team is developing an advaned algorithm that allows creators to be discovered easily by creating appealling content that keeps users on their streams for longer. This allows any creator to begin earning and becoming a partner extremely quickly! The partnered creators earn 95% of all ad revenue and 25% of all site-wide sponsors.</p>
     </div>
 
     <div class="w3-third w3-center">
@@ -69,7 +69,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
       <h1>Appealling Catalogue</h1>
       <h5 class="w3-padding-32">Discovering content is currated by the community.</h5>
 
-      <p class="w3-text-grey">The content catalogue is currated by the communited that watches the same content as you! They know what you like, and know what you want to watch. This also allows us to use non intrusive ad systems that still profit without using your private information. Cookies would be used for storing login information.</p>
+      <p class="w3-text-grey">The content catalogue is currated by the communited that watches the same content as you! They know what you like, and know what you want to watch. This also allows us to use non intrusive ad systems that still profit without using your private information. Cookies would be used for storing login information and sessions.</p>
     </div>
   </div>
 </div>
