--- a/404.html
+++ b/404.html
@@ -1,1 +1,3 @@
 <meta http-equiv="refresh" content="3; URL=https://rodneythomas397.github.io/digistream/" />
+<h1>404 ERROR</h1>
+<h2>REDIRECTING TO HOME</h2>
