--- a/about/index.html
+++ b/about/index.html
@@ -21,16 +21,16 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <div class="w3-top">
   <div class="w3-bar w3-blue w3-card w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-blue" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="./" class="w3-bar-item w3-button w3-padding-large w3-white">About</a>
+    <a href="../" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-white">Home</a>
     <a href="./join" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Beta</a>
-    <a href="../" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Home</a>
+    <a href="./about" class="w3-bar-item w3-button w3-padding-large w3-hover-white">About</a>
     <a href="./contact" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Contact</a>
   </div>
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
     <a href="./join" class="w3-bar-item w3-button w3-padding-large">Beta</a>
-    <a href="./about" class="w3-bar-item w3-button w3-padding-large">About</a>
+    <a href="../" class="w3-bar-item w3-button w3-padding-large">Home</a>
     <a href="./contact" class="w3-bar-item w3-button w3-padding-large">Contact</a>
   </div>
 </div>
