--- a/join/index.html
+++ b/join/index.html
@@ -1,3 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>DigiStream | Signup</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Streaming - Paying Creators What They Deserve">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
+.w3-bar,h1,button {font-family: "Montserrat", sans-serif}
+.fa-anchor,.fa-coffee {font-size:200px}
+</style>
+</head>
+<body>
+
+<!-- Navbar -->
+<div class="w3-top">
+  <div class="w3-bar w3-blue w3-card w3-left-align w3-large">
+    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-blue" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+    <a href="../" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Home</a>
+    <a href="./" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-white">Beta</a>
+    <a href="./about" class="w3-bar-item w3-button w3-padding-large w3-hover-white">About</a>
+    <a href="./contact" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Contact</a>
+  </div>
+
+  <!-- Navbar on small screens -->
+  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+    <a href="./join" class="w3-bar-item w3-button w3-padding-large">Beta</a>
+    <a href="../" class="w3-bar-item w3-button w3-padding-large">Home</a>
+    <a href="./contact" class="w3-bar-item w3-button w3-padding-large">Contact</a>
+  </div>
+</div>
+	
 <script src="https://cdn01.jotfor.ms/static/prototype.forms.js?3.3.35961" type="text/javascript"></script>
 <script src="https://cdn02.jotfor.ms/static/jotform.forms.js?3.3.35961" type="text/javascript"></script>
 <script src="https://js.jotform.com/vendor/postMessage.js?3.3.35961" type="text/javascript"></script>
