--- a/about/index.html
+++ b/about/index.html
@@ -22,9 +22,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   <div class="w3-bar w3-blue w3-card w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-blue" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="../" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Home</a>
-    <a href="./join" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Beta</a>
-    <a href="./about" class="w3-bar-item w3-button w3-padding-large w3-white">About</a>
-    <a href="./contact" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Contact</a>
+    <a href="../join" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Beta</a>
+    <a href="../about" class="w3-bar-item w3-button w3-padding-large w3-white">About</a>
+    <a href="../contact" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Contact</a>
   </div>
 
   <!-- Navbar on small screens -->
