--- a/about/index.html
+++ b/about/index.html
@@ -47,7 +47,17 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   <div class="w3-content">
     <div class="w3-twothird">
       <h1>Our Mission</h1>
-      <p class="w3-text-grey">Our team is filled with streamers and content creators, who feel cheated on by their platforms that steal most of there ad revenue and control their content. We wanted to create a platform in which you can make whatever content you would like and still earn as much as every other partner on the platform.</p>
+      <p class="w3-text-grey">Our team is filled with streamers and content creators, who feel cheated on by their platforms that steal most of there ad revenue and control their content. We wanted to create a platform in which you can make whatever content you would like and still earn as much as every other partner on the platform. We thrive to provide creators with the most amount of earnings possible, while keeping the website afloat.</p>
+    </div>
+  </div>
+</div>
+
+<!-- Second Grid -->
+<div class="w3-row-padding w3-padding-64 w3-container">
+  <div class="w3-content">
+    <div class="w3-twothird">
+      <h1>Behind the Scenes</h1>
+      <p class="w3-text-grey">Our team of around 20 employees is working hard to </p>
     </div>
   </div>
 </div>
